--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -78,3 +78,19 @@ div.box .button{
     border-left:1px double #FF0033;
     border-right:1px double #FF0033;
 }
+.imgFile{
+  background:silver !important;
+  align-itens:left;;
+  padding-left:20px;
+  border-color:goldenrod !important;
+  border-width: 5px !important;
+  border-style:double !important;
+  }
+  .imgFile a{
+    text-decoration:none;
+    font-size: 30px;
+    font-weight: 900;
+    color:navy
+   }
+	
+}
