--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -1,4 +1,4 @@
-@charset "ISO-8859-1";
+@charset "UTF-8";
 *{ margin:0; padding:0;}
  
 body{ font:100% normal Arial, Helvetica, sans-serif; background:#161712;}
